modified additional_config schema
Signed-off-by: Sachin Rana <sacrana324@gmail.com>