@@ -1,7 +1,9 @@
 package io.mosip.esignet.controllers;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import io.mosip.esignet.TestUtil;
 import io.mosip.esignet.core.constants.Constants;
 import io.mosip.esignet.core.constants.ErrorConstants;
@@ -39,7 +41,7 @@ public class ClientMgmtV2ControllerParameterizedTest {
     @Autowired
     private MockMvc mockMvc;
 
-    ObjectMapper objectMapper = new ObjectMapper();
+    private static ObjectMapper mapper = new ObjectMapper();
 
     @AllArgsConstructor
     public static class TestCase {
@@ -76,7 +78,8 @@ public class ClientMgmtV2ControllerParameterizedTest {
     }
 
     private static Stream<TestCase> getTestCases() {
-        Map<String, Object> validAdditionalConfig = getValidAdditionalConfig();
+        List<JsonNode> validAdditionalConfigs = getValidAdditionalConfigs();
+        int i = 0, size = validAdditionalConfigs.size();
         List<TestCase> TEST_CASES = new ArrayList<>(Arrays.asList(
                 // test-name, ClientDetailCreateRequest, ClientDetailUpdateRequest, clientIdQueryParam, errorCode
                 new TestCase("Successful create", new ClientDetailCreateRequestV3("client-id-#12c", "client-name", jwk,
@@ -85,70 +88,70 @@ public class ClientMgmtV2ControllerParameterizedTest {
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, null),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, null),
                 new TestCase("Duplicate client id", new ClientDetailCreateRequestV3("client-id-#12c", "client-name", jwk,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.DUPLICATE_CLIENT_ID),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.DUPLICATE_CLIENT_ID),
                 new TestCase("With Null ClientId", new ClientDetailCreateRequestV3(null, "client-name", jwk,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLIENT_ID),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLIENT_ID),
                 new TestCase("With Empty ClientName", new ClientDetailCreateRequestV3("client-id-v2", " ", jwk,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLIENT_NAME),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLIENT_NAME),
                 new TestCase("With Invalid Language_code", new ClientDetailCreateRequestV3("client-id-v2", "clientname", jwk,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("abc", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLIENT_NAME_MAP_KEY),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLIENT_NAME_MAP_KEY),
                 new TestCase("With Invalid public key", new ClientDetailCreateRequestV3("client-id-v2", "Test client", new HashMap<>(),
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_PUBLIC_KEY),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_PUBLIC_KEY),
                 new TestCase("With null public key", new ClientDetailCreateRequestV3("client-id-v2", "Test client", null,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_PUBLIC_KEY),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_PUBLIC_KEY),
                 new TestCase("With null relying party id", new ClientDetailCreateRequestV3("client-id-v2", "Test client", jwk,
                         null, Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_RP_ID),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_RP_ID),
                 new TestCase("With empty relying party id", new ClientDetailCreateRequestV3("client-id-v2", "Test client", jwk,
                         "  ", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_RP_ID),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_RP_ID),
                 new TestCase("With null user claims", new ClientDetailCreateRequestV3("client-id-v2", "Test client", jwk,
                         "rp-id", null,
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLAIM),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLAIM),
                 new TestCase("With empty user claims", new ClientDetailCreateRequestV3("client-id-v2#2", "Test client",
                         TestUtil.generateJWK_RSA().toPublicJWK().toJSONObject(),
                         "rp-id", Arrays.asList(),
@@ -156,68 +159,68 @@ public class ClientMgmtV2ControllerParameterizedTest {
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, null),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, null),
                 new TestCase("With invalid user claims", new ClientDetailCreateRequestV3("client-id-v2", "Test client", jwk,
                         "rp-id", Arrays.asList(null, "given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLAIM),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLAIM),
                 new TestCase("With valid & invalid user claims", new ClientDetailCreateRequestV3("client-id-v2", "Test client", jwk,
                         "rp-id", Arrays.asList("birthdate", "given_name", "gender", "street"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLAIM),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLAIM),
                 new TestCase("With invalid acr", new ClientDetailCreateRequestV3("client-id-v2", "Test client", jwk,
                         "rp-id", Arrays.asList("birthdate", "given_name", "gender"),
                         Arrays.asList("mosip:idp:acr:static-code-1"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_ACR),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_ACR),
                 new TestCase("With patterned redirectUri", new ClientDetailCreateRequestV3("client-id-v2#3", "Test client", jwk,
                         "rp-id", Arrays.asList("birthdate", "given_name", "gender"),
                         Arrays.asList("mosip:idp:acr:static-code-1"), "https://logo-url/png",
                         Arrays.asList("https://dev.mosip.net/home/**"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_ACR),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_ACR),
                 new TestCase("ClientId with spaces", new ClientDetailCreateRequestV3("client id", "client-name", jwk,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_CLIENT_ID),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_CLIENT_ID),
                 new TestCase("RP-Id with spaces", new ClientDetailCreateRequestV3("cid#1", "client-name", jwk,
                         "rp id  1", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, ErrorConstants.INVALID_RP_ID),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, ErrorConstants.INVALID_RP_ID),
                 new TestCase("with duplicate key", new ClientDetailCreateRequestV3("client-id-v2#4", "client-name", jwk,
                         "rp-id", Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, "unknown_error"),
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, "unknown_error"),
                 new TestCase("update with invalid clientId", null, new ClientDetailUpdateRequestV3("https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "ACTIVE", Arrays.asList("authorization_code"),
                         "client-name#1", Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), "cid#1", "invalid_client_id"),
+                }}, validAdditionalConfigs.get((i++)%size)), "cid#1", "invalid_client_id"),
                 new TestCase("update with invalid language_code", null, new ClientDetailUpdateRequestV3("https://logo-url/png",
                         Arrays.asList("https://logo-url/png"), Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "ACTIVE", Arrays.asList("authorization_code"),
                         "client-name", Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("abc", "clientname");
-                }}, validAdditionalConfig), "cid#1", "invalid_language_code"),
+                }}, validAdditionalConfigs.get((i++)%size)), "cid#1", "invalid_language_code"),
                 new TestCase("update client-details", new ClientDetailCreateRequestV3("client-id-up2", "client-name",
                         TestUtil.generateJWK_RSA().toPublicJWK().toJSONObject(),
                         "rp-id", Arrays.asList("given_name"),
@@ -225,12 +228,12 @@ public class ClientMgmtV2ControllerParameterizedTest {
                         Arrays.asList("https://logo-url/png"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), new ClientDetailUpdateRequestV3("https://logo-url/png",
+                }}, validAdditionalConfigs.get((i++)%size)), new ClientDetailUpdateRequestV3("https://logo-url/png",
                         Arrays.asList("https://logo-url/png", "io.mosip.residentapp://oauth"), Arrays.asList("given_name"),
                         Arrays.asList("mosip:idp:acr:static-code"), "ACTIVE", Arrays.asList("authorization_code"),
                         "client-name#1", Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), "client-id-up2", null),
+                }}, validAdditionalConfigs.get((i++)%size)), "client-id-up2", null),
                 new TestCase("Create with app redirect URL", new ClientDetailCreateRequestV3("client-id-v2", "client-name",
                         TestUtil.generateJWK_RSA().toPublicJWK().toJSONObject(),
                         "rp-id", Arrays.asList("given_name"),
@@ -238,10 +241,10 @@ public class ClientMgmtV2ControllerParameterizedTest {
                         Arrays.asList("io.mosip.residentapp://oauth", "residentapp://oauth/*"), Arrays.asList("authorization_code"),
                         Arrays.asList("private_key_jwt"), new HashMap<String, String>() {{
                     put("eng", "clientname");
-                }}, validAdditionalConfig), null, null, null)
+                }}, validAdditionalConfigs.get((i++)%size)), null, null, null)
         ));
-        List<Map<String, Object>> invalidAdditionalConfigs = getInvalidAdditionalConfigs();
-        for (Map<String, Object> additionalConfig : invalidAdditionalConfigs) {
+        List<JsonNode> invalidAdditionalConfigs = getInvalidAdditionalConfigs();
+        for (JsonNode additionalConfig : invalidAdditionalConfigs) {
             TEST_CASES.add(
                     new TestCase("with invalid additional config", new ClientDetailCreateRequestV3("client-id-v2", "client-name", jwk,
                             "rp-id", Arrays.asList("given_name"),
@@ -272,7 +275,7 @@ public class ClientMgmtV2ControllerParameterizedTest {
         wrapper.setRequestTime(ZonedDateTime
                 .now(ZoneOffset.UTC)
                 .format(DateTimeFormatter.ofPattern(UTC_DATETIME_PATTERN)));
-        return objectMapper.writeValueAsString(wrapper);
+        return mapper.writeValueAsString(wrapper);
     }
 
     private void evaluateResultActions(ResultActions resultActions, String clientId, String status, String errorCode)
@@ -290,53 +293,105 @@ public class ClientMgmtV2ControllerParameterizedTest {
         }
     }
 
-    public static Map<String, Object> getValidAdditionalConfig() {
-        Map<String, Object> validAdditionalConfig = new HashMap<>();
-        validAdditionalConfig.put("userinfo_response_type", "JWS");
-        validAdditionalConfig.put("purpose", Map.ofEntries(
-                Map.entry("type", ""),
+    public static List<JsonNode> getValidAdditionalConfigs() {
+        List<JsonNode> configList = new ArrayList<>();
+        ObjectNode validConfig = mapper.createObjectNode();
+        validConfig.put("userinfo_response_type", "JWS");
+        validConfig.set("purpose", mapper.valueToTree(Map.ofEntries(
+                Map.entry("type", "verify"),
                 Map.entry("title", ""),
                 Map.entry("subTitle", "")
-        ));
-        validAdditionalConfig.put("signup_banner_required", true);
-        validAdditionalConfig.put("forgot_pwd_link_required", true);
-        validAdditionalConfig.put("consent_expire_in_days", 1);
-        return validAdditionalConfig;
+        )));
+        validConfig.put("signup_banner_required", true);
+        validConfig.put("forgot_pwd_link_required", true);
+        validConfig.put("consent_expire_in_days", 1);
+        configList.add(validConfig);
+
+        ObjectNode config = validConfig.deepCopy();
+        config.remove("purpose");  // config
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        ((ObjectNode) config.get("purpose")).remove(List.of("title", "subTitle"));  // purpose without title and subTitle
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        ((ObjectNode) config.get("purpose")).set("title", mapper.valueToTree(Map.ofEntries(
+                Map.entry("@none", "title"),
+                Map.entry("eng", "title")
+        )));
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        ((ObjectNode) config.get("purpose")).set("subTitle", mapper.valueToTree(Map.ofEntries(
+                Map.entry("@none", "subTitle"),
+                Map.entry("eng", "subTitle")
+        )));
+        configList.add(config);
+
+        return configList;
     }
 
-    public static List<Map<String, Object>> getInvalidAdditionalConfigs() {
-        List<Map<String, Object>> invalidAdditionalConfigs = new ArrayList<>();
+    public static List<JsonNode> getInvalidAdditionalConfigs() {
+        List<JsonNode> configList = new ArrayList<>();
 
-        invalidAdditionalConfigs.add(null);
+        configList.add(null);
 
-        Map<String, Object> additionalConfig = getValidAdditionalConfig();
-        additionalConfig.put("userinfo_response_type", "ABC");
-        invalidAdditionalConfigs.add(additionalConfig);
-
-        additionalConfig = getValidAdditionalConfig();
-        additionalConfig.put("purpose", Collections.emptyMap());
-        invalidAdditionalConfigs.add(additionalConfig);
-
-        additionalConfig = getValidAdditionalConfig();
-        additionalConfig.put("purpose", Map.ofEntries(
-                Map.entry("type", ""),
-                Map.entry("title", 1),   //anything other than string
+        ObjectNode validConfig = mapper.createObjectNode();
+        validConfig.put("userinfo_response_type", "JWS");
+        validConfig.set("purpose", mapper.valueToTree(Map.ofEntries(
+                Map.entry("type", "verify"),
+                Map.entry("title", ""),
                 Map.entry("subTitle", "")
-        ));
-        invalidAdditionalConfigs.add(additionalConfig);
+        )));
+        validConfig.put("signup_banner_required", true);
+        validConfig.put("forgot_pwd_link_required", true);
+        validConfig.put("consent_expire_in_days", 1);
 
-        additionalConfig = getValidAdditionalConfig();
-        additionalConfig.put("signup_banner_required", 1); // anything other than boolean
-        invalidAdditionalConfigs.add(additionalConfig);
+        ObjectNode config = validConfig.deepCopy();
+        config.put("userinfo_response_type", "ABC");  // invalid userinfo
+        configList.add(config);
 
-        additionalConfig = getValidAdditionalConfig();
-        additionalConfig.put("forgot_pwd_link_required", 1); // anything other than boolean
-        invalidAdditionalConfigs.add(additionalConfig);
+        config = validConfig.deepCopy();
+        config.put("purpose", mapper.valueToTree(Map.ofEntries(
+                Map.entry("title", "")    // purpose without type field
+        )));
+        configList.add(config);
 
-        additionalConfig = getValidAdditionalConfig();
-        additionalConfig.put("consent_expire_in_days", ""); // anything other than number
-        invalidAdditionalConfigs.add(additionalConfig);
+        config = validConfig.deepCopy();
+        config.put("purpose", mapper.valueToTree(Map.ofEntries(
+                Map.entry("type", "dummy"),   // invalid purpose type
+                Map.entry("title", "")
+        )));
+        configList.add(config);
 
-        return invalidAdditionalConfigs;
+        config = validConfig.deepCopy();
+        config.set("purpose", mapper.valueToTree(Map.ofEntries(
+                Map.entry("type", "verify"),
+                Map.entry("title", Map.ofEntries(Map.entry("eng", "title in english"))) // title without @none key
+        )));
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        config.set("purpose", mapper.valueToTree(Map.ofEntries(
+                Map.entry("type", "verify"),
+                Map.entry("title", Map.ofEntries(Map.entry("@none", "title in default"), Map.entry("eng", "title in english"))),
+                Map.entry("subTitle", Map.ofEntries(Map.entry("fr", "subTitle in french"), Map.entry("eng", "title in english"))) // subTitle without @none key
+        )));
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        config.put("signup_banner_required", 1); // anything other than boolean
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        config.put("forgot_pwd_link_required", 1); // anything other than boolean
+        configList.add(config);
+
+        config = validConfig.deepCopy();
+        config.put("consent_expire_in_days", ""); // anything other than number
+        configList.add(config);
+
+        return configList;
     }
 }
